[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Mocha Assets/UI/ex-symbol.png" type="Texture" id=1]
[ext_resource path="res://assets/Mocha Assets/Icons.PNG" type="Texture" id=2]
[ext_resource path="res://assets/monogram-extended.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/dice_theme.tres" type="Theme" id=4]
[ext_resource path="res://UI/ObjectiveDisplay.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="ObjectiveDisplay" type="Node2D"]
script = ExtResource( 5 )

[node name="ExSprite" type="Sprite" parent="."]
position = Vector2( 4, 3.99999 )
scale = Vector2( 1.30392, 1.54444 )
texture = ExtResource( 1 )

[node name="EmotionTarget" type="Sprite" parent="."]
position = Vector2( -61, -1 )
texture = ExtResource( 2 )
hframes = 4
frame = 1

[node name="AmountTarget" type="Label" parent="."]
margin_left = 37.0
margin_top = -36.0
margin_right = 77.0
margin_bottom = 29.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1
